debugfests/deploy.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "library-deployment"
  namespace: "default"
  labels:
    deployment: "library-deployment"
spec:
  replicas: 3
  # minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: "library-app"
  template:
    metadata:
      labels:
        app: library-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: "library-app"
        image: "esuminski/english:logging"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
