debugfests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations: # Any object can use annotations. These will affect the resource/object in certain ways
    # kubernetes.io/ingress.class: nginx # this is provided by helm?, see https://github.com/kubernetes/ingress-nginx/tree/main/charts/ingress-nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /library/(.*) # regular expression of nginx: this will send anything AFTER the given path to the service stated below
          pathType: Prefix
          backend:
            service:
              name: library-service
              port:
                number: 8080 # you need to tell it what port send the request to
